# ld2410_radar

./: CMakeLists.txt  Makefile  README.md  keywords.txt  library.properties
examples/Arduino_LD2410/: Arduino_LD2410.ino
examples/ESPIDF_LD2410/: CMakeLists.txt
examples/ESPIDF_LD2410/main/: CMakeLists.txt  Kconfig.projbuild
examples/ESPIDF_LD2410/main/src/: main.cpp
examples/NRF_CSDK_LD2410/: CMakeLists.txt  prj.conf
examples/NRF_CSDK_LD2410/boards/arm/radar53/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  nrf5340_cpuapp_common.dts  nrf5340_cpuapp_partition_conf.dts  nrf5340_cpunet_reset.c  nrf5340_shared_sram_planning_conf.dts  pre_dt_board.cmake  radar53_cpuapp.dts  radar53_cpuapp.yaml  radar53_cpuapp_common-pinctrl.dtsi  radar53_cpuapp_defconfig  radar53_cpuapp_ns.dts  radar53_cpuapp_ns.yaml  radar53_cpuapp_ns_defconfig  radar53_cpunet-pinctrl.dtsi  radar53_cpunet.dts  radar53_cpunet.yaml  radar53_cpunet_defconfig
examples/NRF_CSDK_LD2410/src/: main.c
src/: ld2410_radar.c  ld2410_radar.h
